--- a/CoreDataDemo/CoreDataDemo/Base.lproj/Main.storyboard
+++ b/CoreDataDemo/CoreDataDemo/Base.lproj/Main.storyboard
@@ -43,11 +43,42 @@
                                     <action selector="btnInsert:" destination="BYZ-38-t0r" eventType="touchUpInside" id="CLF-Lf-bio"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VnB-qQ-Jma">
+                                <rect key="frame" x="20" y="618" width="374" height="244"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemTealColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Mo-FP-zxc">
+                                <rect key="frame" x="155" y="313" width="104" height="41"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <state key="normal" title="SHOW"/>
+                                <connections>
+                                    <action selector="btnDel:" destination="BYZ-38-t0r" eventType="touchUpInside" id="lvd-DX-pXk"/>
+                                    <action selector="btnInsert:" destination="BYZ-38-t0r" eventType="touchUpInside" id="N3C-zB-btK"/>
+                                    <action selector="btnShow:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xy7-uQ-fba"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cAK-9o-CeV">
+                                <rect key="frame" x="155" y="374" width="104" height="41"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <state key="normal" title="DELETE"/>
+                                <connections>
+                                    <action selector="btnDel:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7TE-Y5-9iJ"/>
+                                    <action selector="btnInsert:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gp5-Tq-1Xd"/>
+                                    <action selector="btnShow:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ct2-cX-bZm"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <connections>
+                        <outlet property="lblKQ" destination="VnB-qQ-Jma" id="U4S-FL-fGW"/>
                         <outlet property="txtID" destination="lkC-to-L1R" id="IbQ-9b-Iij"/>
                         <outlet property="txtTen" destination="Orl-ab-NbA" id="RvF-zC-P1L"/>
                         <outlet property="txtTuoi" destination="KPk-3d-zIC" id="6Zh-MR-0dL"/>
@@ -61,6 +92,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemTealColor">
+            <color red="0.35294117647058826" green="0.78431372549019607" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
